# setup.py

./: pyproject.toml  setup.py
.github/workflows/: test.yml
script/: upload.py
tests/: test_version.py
